fix(): spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,12 @@ body {
 		Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+::-webkit-scrollbar {
+	width: 0 !important;
+	overflow: -moz-scrollbars-none;
+	-ms-overflow-style: none;
+}
+
 a {
 	color: inherit;
 	text-decoration: none;
